# ripin-rs

./: .travis.yml  Cargo.toml  README.md
examples/: custom_expression.rs
src/: convert_ref.rs  expression.rs  lib.rs  stack.rs  try_from_iterator.rs  try_from_ref.rs
src/evaluate/: float.rs  integer.rs  mod.rs
src/operate/: float.rs  integer.rs  mod.rs
src/variable/: dummy_variable.rs  dummy_variables.rs  get_variable.rs  index_var.rs  mod.rs  var_idx.rs
