[package]
name = "ripin"
version = "0.1.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]

description = "Tiny recursive descent expression parser, compiler, and evaluation engine for math expressions. A work in progress port of TinyExpr library to Rust."
keywords = ["math", "expression", "RPN", "reverse", "polish"]
license = "MIT"
repository = "https://github.com/Kerollmops/ripin-rs"
homepage = "https://github.com/Kerollmops/ripin-rs"
documentation = "https://docs.rs/ripin"

[dependencies]
num = "0.1"
